Actions
Bug #12620
closedlittleneck: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors on SPARC with NULL pointers:
../../../sun4u/littleneck/os/littleneck.c: In function 'startup_platform': ../../../sun4u/littleneck/os/littleneck.c:54: error: incompatible type for argument 3 of 'mutex_init' ../../../common/sys/mutex.h:88: note: expected 'kmutex_type_t' but argument is of type 'void *' ../../../sun4u/littleneck/io/pcf8574_lneck.c: In function 'pcf8574_ioctl': ../../../sun4u/littleneck/io/pcf8574_lneck.c:309: error: comparison between pointer and integer ../../../sun4u/littleneck/io/pcf8574_lneck.c: In function 'pcf8574_do_attach': ../../../sun4u/littleneck/io/pcf8574_lneck.c:526: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *'
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit f23a396b6eea5efd75ad61ab78e31f55a36732a8
commit f23a396b6eea5efd75ad61ab78e31f55a36732a8 Author: Toomas Soome <tsoome@me.com> Date: 2020-05-10T07:13:10.000Z 12620 littleneck: NULL pointer errors Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Patrick Mooney <patrick.mooney@joyent.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>
Actions