12620 littleneck: NULL pointer errors Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Patrick Mooney <patrick.mooney@joyent.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>